--- a/challenges/Frontend-Mentor/QR-Code/index.html
+++ b/challenges/Frontend-Mentor/QR-Code/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-12 ">
-          <img src="images/image-qr-code.png" alt="">
+          <img src="images/image-qr-code.png" alt="qr code">
           <h1>Improve your front-end skills by building projects</h1>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
