--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>TH3RIV | gitHub.io</title>
+    <title>Saulius Kulikauskas | RIV</title>
 </head>
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">TH3RIV</a>
+            <a class="navbar-brand" href="index.html">Saulius Kulikauskas | RIV</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topbar"
                 aria-controls="topbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,23 +39,55 @@
                 am able to implement things I learn. You are more than welcome to follow my progress. Once again.
                 WELCOME!</p>
         </div>
-        <div class="container-fluid text-center" id="fluid">
-            <div class="row">
-                <div class="col-12 col-md-4 main-info">
-                    <h2>CHALLENGES</h2>
-                    <img src="Placeholders/education.jpg">
-                    <p>COMING SOON</p>
+        <div class="container-fluid" id="caro">
+            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/education.jpg" class="d-block w-100"
+                                alt="education"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">TITLE HERE</h4>
+                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit.
+                                Tempora ad sed, iure similique
+                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
+                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/work.jpg" class="d-block w-100" alt="work"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">TITLE HERE</h4>
+                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit.
+                                Tempora ad sed, iure similique
+                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
+                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/interests.jpg" class="d-block w-100"
+                                alt="interests"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">TITLE HERE</h4>
+                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit.
+                                Tempora ad sed, iure similique
+                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
+                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-4 main-info">
-                    <h2>PROJECTS</h2>
-                    <img src="Placeholders/work.jpg">
-                    <p>COMING SOON</p>
-                </div>
-                <div class="col-12 col-md-4 main-info">
-                    <h2>GITHUB REPOSITORY</h2>
-                    <img src="Placeholders/interests.jpg">
-                    <p>COMING SOON</p>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </main>
