--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Hello and Welcome!</h1>
             <p>Welcome to the home of my web development journey. Now I know this doesn't look fancy and has barely any
                 features, but I am still early in my progress. Trust me, this will be changing as I learn new things and
-                am able to implement things I learn. You are more than welcome to follow my progress. Once again.
+                am able to implement things I learn. You are more than welcome to follow my progress. Once again,
                 WELCOME!</p>
         </div>
         <div class="container-fluid" id="caro">
