--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <div class="collapse navbar-collapse" id="topbar">
                 <ul class="navbar-nav mx-auto mb-2">
                     <li class="nav-item"><a class="nav-link navlink" href="index.html">HOMEPAGE</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#Home">CHALLENGES</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#Home">EDUCATION</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#Home">WORK EXP.</a></li>
                     <li class="nav-item"><a class="nav-link navlink" href="#Home">PROJECTS</a></li>
                     <li class="nav-item"><a class="nav-link navlink"
-                            href="https://github.com/TH3RIV?tab=repositories">GITHUB REPOSITORY</a></li>
+                            href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
                 </ul>
             </div>
         </div>
@@ -39,35 +40,25 @@
                         <a href="index.html"><img src="Placeholders/education.jpg" class="d-block w-100"
                                 alt="education"></a>
                         <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">TITLE HERE</h4>
-                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit.
-                                Tempora ad sed, iure similique
-                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
-                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                            <h4 class="slideLabel">EDUCATION</h4>
+                            <p class=" d-none d-sm-block slideText">In-depth dive into the history of my education.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
                         <a href="index.html"><img src="Placeholders/work.jpg" class="d-block w-100" alt="work"></a>
                         <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">TITLE HERE</h4>
-                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit.
-                                Tempora ad sed, iure similique
-                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
-                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                            <h4 class="slideLabel">WORK EXPERIENCE</h4>
+                            <p class=" d-none d-sm-block slideText">In-depth dive into the history of my work
+                                experience.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
                         <a href="index.html"><img src="Placeholders/interests.jpg" class="d-block w-100"
                                 alt="interests"></a>
                         <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">TITLE HERE</h4>
-                            <p class=" d-none d-sm-block slideText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit.
-                                Tempora ad sed, iure similique
-                                amet suscipit a quod commodi ducimus, maiores quia dolor voluptates sit magni
-                                repudiandae, soluta natus nobis explicabo?lorem</p>
+                            <h4 class="slideLabel">PROJECTS</h4>
+                            <p class=" d-none d-sm-block slideText">Here you can find all the projects and coding
+                                challenges I have worked on.</p>
                         </div>
                     </div>
                 </div>
