--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul class="navbar-nav mx-auto mb-2">
                     <li class="nav-item"><a class="nav-link navlink" href="index.html">HOMEPAGE</a></li>
                     <li class="nav-item"><a class="nav-link navlink" href="#Home">EDUCATION</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#Home">WORK EXPERIENCE</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#Home">EXPERIENCE</a></li>
                     <li class="nav-item"><a class="nav-link navlink" href="#Home">PROJECTS</a></li>
                     <li class="nav-item"><a class="nav-link navlink"
                             href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
