--- a/challenges/Frontend-Mentor/Product-Card/index.html
+++ b/challenges/Frontend-Mentor/Product-Card/index.html
@@ -33,15 +33,15 @@
         <img src="images/image-product-desktop.jpg" class="image2" alt="perfume image">
       </div>
       <div class="col-12 col-xl-6" id="text">
-        <p class="tag" id="fontTwo">Perfume</p>
+        <p class="fontTwo" id="tag">Perfume</p>
 
-        <h1 id="fontOne">Gabrielle Essence Eau De Parfum</h1>
+        <h1 class="fontOne">Gabrielle Essence Eau De Parfum</h1>
 
-        <p class="description" id="fontTwo">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        <p class="fontTwo" id="description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
           Perfumer-Creator for the House of CHANEL.</p>
         <ul class="prices">
-          <li class="priceOne" id="fontOne">$149.99</li>
-          <li class="priceTwo" id="fontTwo">$169.99</li>
+          <li class="fontOne" id="priceOne">$149.99</li>
+          <li class="fontTwo" id="priceTwo">$169.99</li>
         </ul>
 
         <a href="#" id="addCart"><img src="images/icon-cart.svg" id="cart" alt="cart icon">
