--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Saulius Kulikauskas | RIV</a>
+            <a class="navbar-brand" href="index.html">Saulius Kulikauskas</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topbar"
                 aria-controls="topbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="topbar">
                 <ul class="navbar-nav mx-auto mb-2">
-                    <li class="nav-item"><a class="nav-link navlink" href="index.html">HOMEPAGE</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#Home">EDUCATION</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#Home">EXPERIENCE</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="index.html">ABOUT ME</a></li>
                     <li class="nav-item"><a class="nav-link navlink" href="#Home">PROJECTS</a></li>
                     <li class="nav-item"><a class="nav-link navlink"
                             href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#Home">CONTACT</a></li>
                 </ul>
             </div>
         </div>
