update based on the comment suggestion

--- a/challenges/Frontend-Mentor/Single-Price-Grid/index.html
+++ b/challenges/Frontend-Mentor/Single-Price-Grid/index.html
@@ -25,12 +25,12 @@
 <body>
 
   <main>
-    <div class="container-fluid" id="card">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 tab1">
           <h1 class="heading1">Join our community</h1>
 
-          <h2>30-day, hassle-free money back guarantee</h2>
+          <p class="moneyBack">30-day, hassle-free money back guarantee</p>
 
           <p class="grayText">Gain access to our full library of tutorials along with expert code reviews.
             Perfect for any developers who are serious about honing their skills.</p>
@@ -48,7 +48,7 @@
 
           <p class="lightGrayText">Full access for less than &dollar;1 a day</p>
 
-          <button>Sign Up</button>
+          <a href="#"><button>Sign Up</button></a>
         </div>
         <div class="col-12 col-md-6 tab3">
           <h2 class="heading2">Why Us</h2>
@@ -65,7 +65,6 @@
         </div>
       </div>
     </div>
-
   </main>
 
   <footer>
