--- a/index.html
+++ b/index.html
@@ -2,82 +2,89 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- CSS Bootsrap and custom style -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-
-  <title>Frontend Mentor | Single Price Grid Component</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="Placeholders/favicon-32x32.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <title>Saulius Kulikauskas | RIV</title>
 </head>
 
 <body>
-
-  <main>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12 tab1">
-          <h1 class="heading1">Join our community</h1>
-
-          <h2>30-day, hassle-free money back guarantee</h2>
-
-          <p class="grayText">Gain access to our full library of tutorials along with expert code reviews.
-            Perfect for any developers who are serious about honing their skills.</p>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Saulius Kulikauskas</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topbar"
+                aria-controls="topbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="topbar">
+                <ul class="navbar-nav mx-auto mb-2">
+                    <li class="nav-item"><a class="nav-link navlink" href="#">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#">PROJECTS</a></li>
+                    <li class="nav-item"><a class="nav-link navlink"
+                            href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#">CONTACT</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col-12 col-md-6 tab2">
-          <h2 class="heading2">Monthly Subscription</h2>
-
-          <ul class="price">
-            <li class="whiteText monthPrice">&dollar;29</li>
-            <li class="lightGrayText">per month</li>
-          </ul>
-
-          <p class="lightGrayText">Full access for less than &dollar;1 a day</p>
-
-          <button>Sign Up</button>
+    </nav>
+    <main>
+        <div class="container-fluid" id="caro">
+            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/education.jpg" class="d-block w-100"
+                                alt="education"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">UNTITLED YET</h4>
+                            <p class=" d-none d-sm-block slideText">No description yet.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/work.jpg" class="d-block w-100" alt="work"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">UNTITLED YET</h4>
+                            <p class=" d-none d-sm-block slideText">No description yet.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <a href="index.html"><img src="Placeholders/interests.jpg" class="d-block w-100"
+                                alt="interests"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h4 class="slideLabel">UNTITLED YET</h4>
+                            <p class=" d-none d-sm-block slideText">No description yet.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
-        <div class="col-12 col-md-6 tab3">
-          <h2 class="heading2">Why Us</h2>
-
-          <ul class="lightGrayText perks">
-            <li>Tutorials by industry experts</li>
-            <li>Peer &amp; expert code review</li>
-            <li>Coding exercises</li>
-            <li>Access to our GitHub repos</li>
-            <li>Community forum</li>
-            <li>Flashcard decks</li>
-            <li>New videos every week</li>
-          </ul>
+        <div class="container-fluid text-center">
+            <h1>Hello and Welcome!</h1>
+            <p>Welcome to the home of my web development journey. Now I know this doesn't look fancy and has barely any
+                features, but I am still early in my progress. Trust me, this will be changing as I learn new things and
+                am able to implement things I learn. You are more than welcome to follow my progress. Once again,
+                WELCOME!</p>
         </div>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/TH3RIV">TH3RIV</a>.
-    </div>
-  </footer>
-
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+    </main>
+    <footer>
+        <blockquote class="text-center">Created by RIV - 2022</blockquote>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
