updates to everything

--- a/challenges/Frontend-Mentor/NFT-Card/index.html
+++ b/challenges/Frontend-Mentor/NFT-Card/index.html
@@ -23,35 +23,36 @@
 </head>
 
 <body>
-
-  <div class="card">
-    <div class="nft-image-container">
-      <img src="images/image-equilibrium.jpg" alt="NFT image" class="nft-image">
-      <div class="nft-image-overlay">
-        <img src="images/icon-view.svg" alt="NFT image overlay" class="nft-icon">
+  <main>
+    <div class="card">
+      <div class="nft-image-container">
+        <a href="#"><img src="images/image-equilibrium.jpg" alt="A beautiful glass cube NFT picture"
+            class="nft-image"></a>
+        <div class="nft-image-overlay">
+          <img src="images/icon-view.svg" alt="NFT image overlay" class="nft-icon">
+        </div>
       </div>
+
+      <h1><a href="#">Equilibrium #3429</a></h1>
+
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+
+      <ul>
+        <li><img class="icons" src="images/icon-ethereum.svg" alt="" aria-hidden="true">
+          <p id="eth"> 0.041 ETH</p>
+        </li>
+        <li><img class="icons" src="images/icon-clock.svg" alt="" aria-hidden="true">
+          <p> 3 days left</p>
+        </li>
+      </ul>
+
+      <div class="creator">
+        <img class="creator-img" src="images/image-avatar.png" alt="Picture of the creator">
+        <p>Creation of<a href="#"> Jules Wyvern</a></p>
+      </div>
+
     </div>
-
-    <h1><a href="#">Equilibrium #3429</a></h1>
-
-    <p>Our Equilibrium collection promotes balance and calm.</p>
-
-    <ul>
-      <li><img class="icons" src="images/icon-ethereum.svg" alt="eth icon">
-        <p id="eth"> 0.041 ETH</p>
-      </li>
-      <li><img class="icons" src="images/icon-clock.svg" alt="clock icon">
-        <p> 3 days left</p>
-      </li>
-    </ul>
-
-    <div class="creator">
-      <img class="creator-img" src="images/image-avatar.png" alt="avatar image">
-      <p>Creation of<a href="#"> Jules Wyvern</a></p>
-    </div>
-
-  </div>
-
+  </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
