--- a/challenges/Frontend-Mentor/Product-Card/index.html
+++ b/challenges/Frontend-Mentor/Product-Card/index.html
@@ -25,32 +25,32 @@
 </head>
 
 <body>
+  <main>
+    <div class="container-fluid bg-white">
+      <div class="row">
+        <div class="col-12 col-xl-6">
+          <img src="images/image-product-mobile.jpg" class="image1" alt="perfume image">
+          <img src="images/image-product-desktop.jpg" class="image2" alt="perfume image">
+        </div>
+        <div class="col-12 col-xl-6" id="text">
+          <p class="fontTwo" id="tag">Perfume</p>
 
-  <div class="container-fluid bg-white">
-    <div class="row">
-      <div class="col-12 col-xl-6">
-        <img src="images/image-product-mobile.jpg" class="image1" alt="perfume image">
-        <img src="images/image-product-desktop.jpg" class="image2" alt="perfume image">
-      </div>
-      <div class="col-12 col-xl-6" id="text">
-        <p class="fontTwo" id="tag">Perfume</p>
+          <h1 class="fontOne">Gabrielle Essence Eau De Parfum</h1>
 
-        <h1 class="fontOne">Gabrielle Essence Eau De Parfum</h1>
+          <p class="fontTwo" id="description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+            Perfumer-Creator for the House of CHANEL.</p>
+          <ul class="prices">
+            <li class="fontOne" id="priceOne">$149.99</li>
+            <li class="fontTwo" id="priceTwo">$169.99</li>
+          </ul>
 
-        <p class="fontTwo" id="description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
-          Perfumer-Creator for the House of CHANEL.</p>
-        <ul class="prices">
-          <li class="fontOne" id="priceOne">$149.99</li>
-          <li class="fontTwo" id="priceTwo">$169.99</li>
-        </ul>
+          <a href="#" id="addCart"><img src="images/icon-cart.svg" id="cart" alt="cart icon">
+            Add to Cart</a>
 
-        <a href="#" id="addCart"><img src="images/icon-cart.svg" id="cart" alt="cart icon">
-          Add to Cart</a>
-
+        </div>
       </div>
     </div>
-  </div>
-
+  </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
