--- a/challenges/Frontend-Mentor/QR-Code/index.html
+++ b/challenges/Frontend-Mentor/QR-Code/index.html
@@ -23,19 +23,19 @@
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col-12 ">
-          <img src="images/image-qr-code.png" alt="qr code">
+          <img src="images/image-qr-code.png" alt="">
           <h1>Improve your front-end skills by building projects</h1>
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
     </div>
-
+  </main>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/TH3RIV">TH3RIV</a>.
     </div>
-  </main>
-
+  </footer>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
