--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -85,8 +85,7 @@
                         so that the lives she must end while on patrol do not burden her. Even as a young recruit, the
                         drill instructors and other trainees found it a little disconcerting that, while Muni was
                         normally charming and kind, she turned deadly serious and highly efficient the minute combat
-                        exercises began. Muni's superiors quickly steered her toward the Scouts of the Mothership, which
-                        is one of Bandle City's most distinguished Special Forces unit alongside the Megling Commandos.
+                        exercises began.
                         While most yordles do not handle solo scouting missions with a great deal of finesse, Muni is
                         remarkably efficient at them. Her record of success in defending Bandle City from infiltrators
                         easily makes her one of the most dangerous yordles alive, though you'd never know it by having a
