--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -36,7 +36,7 @@
                     <a class="link" href="#muni">
                         <li class="linkMenuItem">WHAT IS MUNI?</li>
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="#costumes">
                         <li class="linkMenuItem">MUNI COSTUMES</li>
                     </a>
                     <a class="link" href="https://lolchess.gg/profile/euw/munii">
@@ -101,6 +101,75 @@
                         alt="A cute picture of real life Muni">
                 </div>
             </div>
+        </div>
+
+        <div class="container-fluid" id="costumes">
+            <h1>ALL KNOWN (so far...) MUNI COSTUMES</h1>
+            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="5000">
+                        <img src="images/skins/classic.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="classic muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/happy-elf.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="happy elf muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/recon.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="recon muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/badger.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="badger muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/astronaut.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="astronaut muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/cottontail.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="cottontail muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/super.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="super muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/panda.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="panda muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/omega-squad.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="omega squad muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/little-devil.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="little devil muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/beemo.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="bee muni costume">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="images/skins/spirit-blossom.jpg" class="img-fluid d-block w-100 caroImage"
+                            alt="spirit blossom muni costume">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="container">
+            <p class="text-center">Created for Muni by RIV - 2022</p>
         </div>
     </main>
 
