--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -168,8 +168,8 @@
                 </button>
             </div>
         </div>
-        <div class="container">
-            <p class="text-center">Created for Muni by RIV - 2022</p>
+        <div class="container-fluid">
+            <p class="text-center footer">Created for Muni by RIV - 2022</p>
         </div>
     </main>
 
