--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -10,7 +10,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
 
     <nav class="navbar">
         <a id="menuButton" class="btn" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">SITE MENU</a>
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">MENU</a>
 
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
             aria-labelledby="offcanvasWithBothOptionsLabel">
@@ -56,7 +56,7 @@
                 <img class="mainImage" src="images/satanTeemo.png" alt="An avatar of a cute little devil called Muni">
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid info" id="muni">
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 col-lg-6 order-1 order-lg-1">
                     <h1 id="muni" class="text-center">WHAT IS MUNI?</h1>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="container-fluid" id="costumes">
-            <h1>ALL KNOWN (so far...) MUNI COSTUMES</h1>
+            <h1 class="heading">ALL KNOWN (so far...) MUNI COSTUMES</h1>
             <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="5000">
