--- a/challenges/Frontend-Mentor/Order-Summary/index.html
+++ b/challenges/Frontend-Mentor/Order-Summary/index.html
@@ -49,14 +49,10 @@
       </div>
 
 
-      <div class="buttons">
+      <div class="buttons text-center">
 
-        <a href="#" class="buttonLinks">
-          <button type="button" class="backgroundButton">Proceed to Payment</button>
-        </a>
-        <a href="#" class="buttonLinks">
-          <button type="button" class="noBackgroundButton regular">Cancel Order</button>
-        </a>
+        <a href="#" class="buttonLinks backgroundButton" type="button">Proceed to Payment</a>
+        <a href="#" class="buttonLinks noBackgroundButton regular" type="button">Cancel Order</a>
 
       </div>
     </div>
