--- a/challenges/Frontend-Mentor/Order-Summary/index.html
+++ b/challenges/Frontend-Mentor/Order-Summary/index.html
@@ -51,8 +51,8 @@
 
       <div class="buttons text-center">
 
-        <a href="#" class="buttonLinks backgroundButton" type="button">Proceed to Payment</a>
-        <a href="#" class="buttonLinks noBackgroundButton regular" type="button">Cancel Order</a>
+        <a href="#" class="buttonLinks backgroundButton">Proceed to Payment</a>
+        <a href="#" class="buttonLinks noBackgroundButton regular">Cancel Order</a>
 
       </div>
     </div>
