--- a/Projects/Muni/index.html
+++ b/Projects/Muni/index.html
@@ -20,152 +20,167 @@
 </head>
 
 <body id="home">
+    <header>
+        <nav class="navbar">
+            <a id="menuButton" class="btn" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">MENU</a>
 
-    <nav class="navbar">
-        <a id="menuButton" class="btn" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">MENU</a>
-
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-            aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Where do you want to go?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="linkMenu">
-                    <a class="link" href="#muni">
-                        <li class="linkMenuItem">WHAT IS MUNI?</li>
-                    </a>
-                    <a class="link" href="#costumes">
-                        <li class="linkMenuItem">MUNI COSTUMES</li>
-                    </a>
-                    <a class="link" href="https://lolchess.gg/profile/euw/munii">
-                        <li class="linkMenuItem">MUNI TFT
-                            STATS</li>
-                        <a class="link" href="#home">
-                            <li class="linkMenuItem">BACK TO TOP</li>
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+                aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Where do you want to go?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="linkMenu">
+                        <a class="link" href="#muni">
+                            <li class="linkMenuItem">WHAT IS MUNI?</li>
                         </a>
-                </ul>
+                        <a class="link" href="#costumes">
+                            <li class="linkMenuItem">MUNI COSTUMES</li>
+                        </a>
+                        <a class="link" href="https://lolchess.gg/profile/euw/munii">
+                            <li class="linkMenuItem">MUNI TFT
+                                STATS</li>
+                            <a class="link" href="#home">
+                                <li class="linkMenuItem">BACK TO TOP</li>
+                            </a>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
+        </nav>
+    </header>
     <main>
         <div class="container-fluid">
             <div class="row">
                 <img class="mainImage" src="images/satanTeemo.png" alt="An avatar of a cute little devil called Muni">
             </div>
         </div>
-        <div class="container-fluid info" id="muni">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 col-lg-6 order-1 order-lg-1">
-                    <h1 id="muni" class="text-center">WHAT IS MUNI?</h1>
-                    <p class="par1">Undeterred by even the most dangerous and threatening of obstacles, Muni scouts the
-                        world with
-                        boundless enthusiasm and a cheerful spirit. A yordle with an unwavering sense of morality, she
-                        takes pride in following the Bandle Scout's Code, sometimes with such eagerness that she is
-                        unaware of the broader consequences of her actions. Though some say the existence of the Scouts
-                        is questionable, one thing is for certain: Muni's conviction is nothing to be trifled with.
-                        Muni is a legend among her yordle brothers and sisters in Bandle City. As far as yordles are
-                        concerned, there is something just slightly off about her. While Muni enjoys the companionship
-                        of other yordles, she also insists on frequent solo missions in the ongoing defense of Bandle
-                        City.</p>
+        <div class="content">
+            <div id="muni">
+                <div class="container-fluid">
+                    <div class="row info">
+                        <div class="col-12 col-xl-6 order-1 order-xl-1 ps-xl-0">
+                            <h1 id="muni" class="text-center">WHAT IS MUNI?</h1>
+                            <p class="par1">Undeterred by even the most dangerous and threatening of obstacles,
+                                Muni
+                                scouts the world with boundless enthusiasm and a cheerful spirit. A yordle with an
+                                unwavering sense of
+                                morality, she takes pride in following the Bandle Scout's Code, sometimes with such
+                                eagerness that she
+                                is unaware of the broader consequences of her actions. Though some say the existence of
+                                the
+                                Scouts is questionable, one thing is for certain: Muni's conviction is nothing to be
+                                trifled
+                                with. Muni is a legend among her yordle brothers and sisters in Bandle City. As far as
+                                yordles
+                                are concerned, there is something just slightly off about her. While Muni enjoys the
+                                companionship of other yordles, she also insists on frequent solo missions in the
+                                ongoing defense of
+                                Bandle City.</p>
+                        </div>
+                        <div class="col-12 col-xl-6 order-2 order-xl-2 pe-xl-0">
+                            <img class="parImage img-fluid mx-auto d-block w-100" src="images/coolTeemo.jpg"
+                                alt="A cute picture of real life Muni">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6 order-2 order-lg-2">
-                    <img class="parImage img-fluid mx-auto d-block" src="images/coolTeemo.jpg"
-                        alt="A cute picture of real life Muni">
+                <div class="container-fluid">
+                    <div class="row info">
+                        <div class="col-12 col-xl-6 order-1 order-xl-2 pe-xl-0">
+                            <p class="par2">Despite her genuinely warm personality, something switches off
+                                inside Muni's
+                                mind during combat so that the lives she must end while on patrol do not burden her.
+                                Even as a young
+                                recruit, the drill instructors and other trainees found it a little disconcerting that,
+                                while Muni
+                                was normally charming and kind, she turned deadly serious and highly efficient the
+                                minute
+                                combat exercises began. Her record of success in defending Bandle City
+                                from
+                                infiltrators easily makes her one of the most dangerous yordles alive, though you'd
+                                never know it by
+                                having a cup of honey mead with her at her favorite inn. To help cope
+                                with her
+                                lengthy periods of isolation, Muni recently struck up a friendship with Tristana, a
+                                fellow
+                                member of Bandle City's Special Forces. Muni is a pint-sized foe that many have come to
+                                fear and
+                                whose small size belies her fearsome resolve.
+                            </p>
+                        </div>
+                        <div class="col-12 col-xl-6 order-2 order-xl-1 ps-xl-0">
+                            <img class="parImage img-fluid mx-auto d-block w-100" src="images/Teemo-Portrait.jpg"
+                                alt="A cute picture of real life Muni">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 col-lg-6 order-1 order-lg-2">
-                    <p class="par2">Despite her genuinely warm personality, something switches off inside Muni's mind
-                        during combat
-                        so that the lives she must end while on patrol do not burden her. Even as a young recruit, the
-                        drill instructors and other trainees found it a little disconcerting that, while Muni was
-                        normally charming and kind, she turned deadly serious and highly efficient the minute combat
-                        exercises began.
-                        While most yordles do not handle solo scouting missions with a great deal of finesse, Muni is
-                        remarkably efficient at them. Her record of success in defending Bandle City from infiltrators
-                        easily makes her one of the most dangerous yordles alive, though you'd never know it by having a
-                        cup of honey mead with her at her favorite inn. Her signature weapon - a blowgun - uses a rare
-                        ajunta poison she personally gathers from the jungles of Kumungu. To help cope with her lengthy
-                        periods of isolation, Muni recently struck up a friendship with Tristana, a fellow member of
-                        Bandle City's Special Forces. Muni is a pint-sized foe that many have come to fear and whose
-                        small size belies her fearsome resolve.
-                    </p>
-                </div>
-                <div class="col-12 col-lg-6 order-2 order-lg-1">
-                    <img class="parImage img-fluid mx-auto d-block" src="images/Teemo-Portrait.jpg"
-                        alt="A cute picture of real life Muni">
-                </div>
-            </div>
-        </div>
 
-        <div class="container-fluid" id="costumes">
-            <h1 class="heading">ALL KNOWN (so far...) MUNI COSTUMES</h1>
-            <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="5000">
-                        <img src="images/skins/classic.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="classic muni costume">
+            <div class="container-fluid" id="costumes">
+                <h1 class="heading">ALL KNOWN (so far...) MUNI COSTUMES</h1>
+                <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="5000">
+                            <img src="images/skins/classic.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="classic muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/happy-elf.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="happy elf muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/recon.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="recon muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/badger.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="badger muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/astronaut.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="astronaut muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/cottontail.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="cottontail muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/super.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="super muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/panda.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="panda muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/omega-squad.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="omega squad muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/little-devil.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="little devil muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/beemo.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="bee muni costume">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <img src="images/skins/spirit-blossom.jpg" class="img-fluid d-block w-100 caroImage"
+                                alt="spirit blossom muni costume">
+                        </div>
                     </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/happy-elf.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="happy elf muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/recon.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="recon muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/badger.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="badger muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/astronaut.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="astronaut muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/cottontail.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="cottontail muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/super.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="super muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/panda.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="panda muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/omega-squad.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="omega squad muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/little-devil.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="little devil muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/beemo.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="bee muni costume">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <img src="images/skins/spirit-blossom.jpg" class="img-fluid d-block w-100 caroImage"
-                            alt="spirit blossom muni costume">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </div>
         <div class="container-fluid">
