--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Saulius Kulikauskas</a>
@@ -23,7 +24,7 @@
             <div class="collapse navbar-collapse" id="topbar">
                 <ul class="navbar-nav mx-auto mb-2">
                     <li class="nav-item"><a class="nav-link navlink" href="#">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link navlink" href="#">PROJECTS</a></li>
+                    <li class="nav-item"><a class="nav-link navlink" href="#caro">PROJECTS</a></li>
                     <li class="nav-item"><a class="nav-link navlink"
                             href="https://github.com/TH3RIV?tab=repositories">GITHUB</a></li>
                     <li class="nav-item"><a class="nav-link navlink" href="#">CONTACT</a></li>
@@ -31,30 +32,63 @@
             </div>
         </div>
     </nav>
+
     <main>
+        <div class="container-fluid text-center about" id="about">
+            <div class="text">
+                <ul>
+                    <li>
+                        <p>Welcome! My name is Saulius, but friends call me Riv.</p>
+                    </li>
+                    <li>
+                        <p>My journey began over 30 years ago in Lithuania and so far has led me to UK.</p>
+                    </li>
+                    <li>
+                        <p>I am teaching myself to become the best FRONTEND DEVELOPER I can be.</p>
+                    </li>
+                    <li>
+                        <p>Currently able to work with HTML / CSS
+                            <!--  / JavaScript -->.
+                        </p>
+                    </li>
+                    <li>
+                        <p>My interests also include sports, movies / TV series, video games and cars.</p>
+                    </li>
+                    <li>
+                        <p>Feel free to look around and let me know how can I help you!</p>
+                    </li>
+                </ul>
+            </div>
+            <img class="me" src="Placeholders/me.jpg" alt="a beautiful picture of Riv">
+        </div>
+
         <div class="container-fluid" id="caro">
+            <h1 class="text-center">PAST PROJECTS</h1>
             <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="5000">
-                        <a href="index.html"><img src="Placeholders/education.jpg" class="d-block w-100"
-                                alt="education"></a>
+                        <a href="https://th3riv.github.io/Projects/Muni/"><img class="caroImg"
+                                src="https://lh3.googleusercontent.com/gFBgIMhhRO2-l0TX-qlNsxZhjx3ofAw5nMXJA11e9j9-88D2Cn7bECWV_yQmCmaJhe2ickq0wXUIjBimhEKbOUbNg-AnTzDKMA9OTzayuktuxZzbuUIpX3B3pvaW8ZDgMFJNS-XsSjeZ6D33Vxz4m_HUO4NSVfMadQtkXrSca7lV0gTX4KACL5aXjYp_YOqQlODLjMRwXf3s8psGD-afZ2eWJ2IeGhuTvTSYWz2GDhzdIiDZfS8Co-M4DXYERfwQIYHuGe2qQVp4K8OAVm6utVnah_9TSZg0tWEFNwZnJFeEsDqQ7J7dqJ6yr8w-wz4vMvO0NRLWqe6Z2PzhVmKihqTjKmNnFPV1eQ9EZNBqNg8AF7xu5xI6agSNRWQcy1szRjJC6xdk--4ppFndKaAhFG0FTUvbt37YTJMltmSplZOrbLYB97wn8eSVe66UIc-Jp5Qr6y5MRjrq5Rn0zGMtGbblU736fWO40aI8zd4azg3W_60yxGIRtnKMtWe8q6TglyBpaK1JN9Zp6zjbvRgYFZnKyHi6DUVT6tm2BV02BZVs1xAZIYvPR0fnwJhd4qCJeeXhsEe5k5VYpcZHfwEIckszoQu0ZLZpEt9MYWh95o0nGaVFLwM4eq_p4pf9kSCwLJBCtAEss3DiE_eieN0oNY_Zt6bfZmahteKXsnx7fEgJ_msAb7UNCs2CI06BQ4cmjzJz1c9fNG5I33Qz67vXRmkxeajAPW-A7L0A1DTNSyr8D6tiWsQetPNJ8LjgFt3GWFFvAg-kBsccTI2uFfDR6JThkALHSrIZyZwiQ7KjV-pRN_0G7YgYAX3PVYn5huVIkHOzOT9eJYwX3g7U57CSjE5tE3eWVzWTK4z8cip-91OkXoozQX_DRN51AZ-0-VkKqf_E34qT2GJoqCbpCVnJAff43sVUfg9F8oAdteEg44L6nvzXeEDnjX27KDFknsA8rhj8PyvjpMWyjPT_FQ3d6REX1NXwVyP7Js4CElKByy8bYzHnpA_z1UgTow=w1350-h600-no?authuser=0"
+                                class="d-block w-100" alt="very first project for a friend"></a>
                         <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">UNTITLED YET</h4>
+                            <h2 class="slideLabel">Project MUNI</h2>
+                            <p class=" d-none d-sm-block slideText">A fun little project for a very good friend. Click
+                                on the image to check it out!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <a href="index.html"><img class="caroImg" src="Placeholders/work.jpg" class="d-block w-100"
+                                alt="work"></a>
+                        <div class="carousel-caption d-md-block">
+                            <h2 class="slideLabel">UNTITLED YET</h2>
                             <p class=" d-none d-sm-block slideText">No description yet.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="5000">
-                        <a href="index.html"><img src="Placeholders/work.jpg" class="d-block w-100" alt="work"></a>
-                        <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">UNTITLED YET</h4>
-                            <p class=" d-none d-sm-block slideText">No description yet.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="5000">
-                        <a href="index.html"><img src="Placeholders/interests.jpg" class="d-block w-100"
+                        <a href="index.html"><img class="caroImg" src="Placeholders/interests.jpg" class="d-block w-100"
                                 alt="interests"></a>
                         <div class="carousel-caption d-md-block">
-                            <h4 class="slideLabel">UNTITLED YET</h4>
+                            <h2 class="slideLabel">UNTITLED YET</h2>
                             <p class=" d-none d-sm-block slideText">No description yet.</p>
                         </div>
                     </div>
@@ -70,13 +104,6 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </div>
-        <div class="container-fluid text-center">
-            <h1>Hello and Welcome!</h1>
-            <p>Welcome to the home of my web development journey. Now I know this doesn't look fancy and has barely any
-                features, but I am still early in my progress. Trust me, this will be changing as I learn new things and
-                am able to implement things I learn. You are more than welcome to follow my progress. Once again,
-                WELCOME!</p>
         </div>
     </main>
     <footer>
