--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
                         <p>My journey began over 30 years ago in Lithuania and so far has led me to UK.</p>
                     </li>
                     <li>
-                        <p>I am teaching myself to become the best FRONTEND DEVELOPER I can be.</p>
+                        <p>I am teaching myself to become the best FRONT-END DEVELOPER I can be.</p>
                     </li>
                     <li>
-                        <p>Currently able to work with HTML / CSS
-                            <!--  / JavaScript -->.
+                        <p>Currently able to work with HTML / CSS / JavaScript.
                         </p>
                     </li>
                     <li>
