--- a/Projects/Score-Counter/index.html
+++ b/Projects/Score-Counter/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="container">
         <div class="image">
-            <img src="https://i.pinimg.com/564x/a5/e5/7d/a5e57d96bd2b079810dda9b27a14e4e6.jpg" alt="">
+            <img src="https://i.pinimg.com/564x/a5/e5/7d/a5e57d96bd2b079810dda9b27a14e4e6.jpg"
+                alt="Ping Pong racket and a ball on a table.">
         </div>
         <div class="text">
             <p>Player One - Player Two</p>
@@ -32,6 +33,7 @@
                 <option value="8">8</option>
                 <option value="9">9</option>
                 <option value="10">10</option>
+                <option value="11">11</option>
             </select>
         </div>
         <div class="buttons">
