--- a/Projects/Score-Counter/index.html
+++ b/Projects/Score-Counter/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:url" content="https://th3riv.github.io/Projects/Score-Counter/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SCORE COUNTER">
+    <meta property="og:description" content="A little score counter application, that helps you keep track of score!">
+    <meta property="og:image" content="https://i.gyazo.com/8222e54b7c33b835db0f14bce9044310.png">
+
     <link rel="stylesheet" href="style.css">
     <title>SCORE COUNTER</title>
 </head>
