--- a/challenges/Frontend-Mentor/Profile-Card/index.html
+++ b/challenges/Frontend-Mentor/Profile-Card/index.html
@@ -22,10 +22,10 @@
   <main>
     <div class="card">
       <div class="card-background">
-        <img src="/images/bg-pattern-card.svg" alt="" aria-hidden="true">
+        <img src="images/bg-pattern-card.svg" alt="" aria-hidden="true">
       </div>
       <div>
-        <img class="profile-pic" src="/images/image-victor.jpg" alt="profile picture">
+        <img class="profile-pic" src="images/image-victor.jpg" alt="profile picture">
       </div>
       <div class="info">
         <div class="name-age">
