--- a/challenges/Frontend-Mentor/Profile-Card/index.html
+++ b/challenges/Frontend-Mentor/Profile-Card/index.html
@@ -58,7 +58,7 @@
     </div>
   </footer>
 
-  <!-- <script src="/javascript/app.js"></script> -->
+  <script src="/javascript/app.js"></script>
 
 </body>
 
