--- a/challenges/Frontend-Mentor/Profile-Card/index.html
+++ b/challenges/Frontend-Mentor/Profile-Card/index.html
@@ -12,7 +12,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Profile card component</title>
 
