--- a/challenges/Frontend-Mentor/Profile-Card/index.html
+++ b/challenges/Frontend-Mentor/Profile-Card/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="info">
         <div class="name-age">
-          <p class="text-dark">Victor Crest</p>
+          <h1 class="text-dark">Victor Crest</h1>
           <p class="text-light" id="age">26</p>
         </div>
         <p class="text-light city">London</p>
