--- a/challenges/Frontend-Mentor/Interactive-Rating/index.html
+++ b/challenges/Frontend-Mentor/Interactive-Rating/index.html
@@ -29,7 +29,7 @@
 
         <div class="text">
           <div class="title">
-            <p> How did we do?</p>
+            <h1> How did we do?</h1>
           </div>
 
           <div class="descr">
