--- a/challenges/Frontend-Mentor/Interactive-Rating/index.html
+++ b/challenges/Frontend-Mentor/Interactive-Rating/index.html
@@ -28,8 +28,8 @@
         <img class="star" src="images/icon-star.svg" alt="star icon" aria-hidden="true">
 
         <div class="text">
-          <div class="title">
-            <h1> How did we do?</h1>
+          <div>
+            <h1 class="title"> How did we do?</h1>
           </div>
 
           <div class="descr">
@@ -81,8 +81,8 @@
         </div>
 
         <div class="text">
-          <div class="title">
-            <p> Thank you!</p>
+          <div>
+            <p class="title"> Thank you!</p>
           </div>
 
           <div class="descr">
