--- a/challenges/Frontend-Mentor/C9-Social-Proof/index.html
+++ b/challenges/Frontend-Mentor/C9-Social-Proof/index.html
@@ -27,7 +27,7 @@
 
   <main>
 
-    <article class="container flex">
+    <div class="container flex">
 
       <div class="description-rating flex">
 
@@ -126,7 +126,7 @@
         </div>
       </section>
 
-    </article>
+    </div>
 
   </main>
 
